crates/apollo-compiler/test_data/diagnostics/0097_enum_extensions.txt
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0097_enum_extensions.graphql:13:15]
    │
  8 │ extend enum E @nonRepeatable {
    │               ───────┬──────  
    │                      ╰──────── directive nonRepeatable first called here
    │ 
 13 │ extend enum E @nonRepeatable {
    │               ───────┬──────  
    │                      ╰──────── directive nonRepeatable called again here
────╯
Error: the enum value `MEMBER_2` is defined multiple times in the document
    ╭─[0097_enum_extensions.graphql:14:3]
    │
  5 │   MEMBER_2
    │   ────┬───  
    │       ╰───── previous definition of `MEMBER_2` here
    │ 
 14 │   MEMBER_2
    │   ────┬───  
    │       ╰───── `MEMBER_2` redefined here
    │ 
    │ Help: MEMBER_2 must only be defined once in this enum.
────╯
Error: the enum value `MEMBER_4` is defined multiple times in the document
    ╭─[0097_enum_extensions.graphql:15:3]
    │
 10 │   MEMBER_4
    │   ────┬───  
    │       ╰───── previous definition of `MEMBER_4` here
    │ 
 15 │   MEMBER_4
    │   ────┬───  
    │       ╰───── `MEMBER_4` redefined here
    │ 
    │ Help: MEMBER_4 must only be defined once in this enum.
────╯

